@@ -1,3 +1,8 @@
+2003-04-14  Kevin Kenny  <kennykb@acm.org>
+
+	* win/tclWinFile.c: added conditionals to restore compilation on
+	VC++6, which was broken by recent changes.
+	
 2003-04-14  Vince Darley  <vincentdarley@users.sourceforge.net>
 
 	Merged various bug fixes from current cvs head:
